# ThaiWordChecker

./: CMakeLists.txt  Grammar.h  GraphStack.cpp  GraphStack.h  LoadGrammar.cpp  OffLineParserUtilityEx  ParseTree.cpp  ParseTree.h  README.md  SimpleLR.cpp  SimpleLR.h  build.sh  common.cpp  common.h  run.sh  thai.test.splitEX.txt  thai.test.txt  typedefs.h  util.cpp  util.h
